<resources>
    <string-array name="add_photo_dialog_options">
        <item>Take Photo</item>
        <item>Select Photo</item>
    </string-array>

    <string-array name="add_media_dialog_options">
        <item>Take Photo</item>
        <item>Select Photo</item>
        <item>Select Media</item>
    </string-array>

    <string-array name="create_recipe_options">
        <item>Create New Recipe</item>
        <item>Import Recipe</item>
    </string-array>

    <!--general-->
    <string name="amount_label">Amount</string>
    <string name="about_label">About</string>
    <string name="add_label">Add</string>
    <string name="add_photo_label">Add Photo</string>
    <string name="add_media_label">Add Media</string>
    <string name="select_media_uri">Enter Image or YouTube video uri</string>
    <string name="app_name" translatable="false">Electronic Cook Book</string>
    <string name="button_minus_label">Minus</string>
    <string name="button_plus_label">Plus</string>
    <string name="confirm_label">Confirm</string>
    <string name="delete_label">Delete</string>
    <string name="description_label">Description</string>
    <string name="edit_label">Edit</string>
    <string name="edit_text">Input Field</string>
    <string name="image_label">Image</string>
    <string name="menu_desc">Menu</string>
    <string name="menu_action_button_desc">Menu Action Button</string>
    <string name="name_label">Name</string>
    <string name="optional_label">Optional</string>
    <string name="reset_label">Reset</string>
    <string name="save_label">Save</string>
    <string name="select_image_label">Select Image</string>
    <string name="select_label">Select</string>
    <string name="settings_label">Settings</string>
    <string name="start_label">Start</string>
    <string name="yield_label">Yield</string>
    <string name="nutrition_label">Nutrition</string>
    <string name="empty" translatable="false" />

    <string name="name_input_field_label">Name Field</string>
    <string name="description_input_fieldlabel">Description Field</string>
    <string name="yield_input_field_label">Yield Field</string>
    <string name="amount_input_field_label">Amount Field</string>
    <string name="nutrition_input_field_label">Nutrition Field</string>

    <!--ingredient-->
    <string name="add_ingredient_label">Add Ingredient</string>
    <string name="edit_ingredient_label">Edit Ingredient</string>
    <string name="ingredient_icon_label">Ingredient Image</string>
    <string name="ingredient_label">Ingredient</string>
    <string name="ingredients_label">Ingredients</string>

    <!--recipe-->
    <string name="edit_recipe_label">Edit Recipe</string>
    <string name="recipe_label">Recipe</string>
    <string name="recipes_label">Recipes</string>

    <!--step-->
    <string name="add_step_label">Add Step</string>
    <string name="steps_tab_label">Steps</string>
    <string name="timer_icon_label">Timer</string>
    <string name="timer_input_hint" translatable="false">00</string>
    <string name="timer_input_label_text">Timer</string>
    <string name="timer_input_separator" translatable="false">:</string>

    <!--profile-->
    <string name="add_profile_label">Add Profile</string>
    <string name="change_profile_label">Change Profile</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="locked_profile_label">Locked Profile</string>
    <string name="password_label">Password</string>
    <string name="password_protection_notice">Leave this field empty to disable password protection</string>
    <string name="profile_name_hint">Liza</string>
    <string name="profiles_label">Profiles</string>

    <!-- Strings related to login -->
    <string name="log_in_dialog_label">Log In Required</string>
    <string name="action_sign_in">Log In</string>
    <string name="invalid_password">Password must be longer than 5 characters</string>
    <string name="login_failed">"Wrong Password"</string>
    <string name="login_password_notice">To access this profile you must enter the password!</string>
    <string name="login_successful_message">Login Successful!</string>
    <string name="drag_handle_desc">Drag Handle</string>
    <string name="filter_label">Filter</string>
    <string name="sort_by_label">Sort By</string>
    <string name="recent_label">Recent</string>
    <string name="with_ingredients_label">With Ingredients</string>
    <string name="without_ingredients_label">Without Ingredients</string>
    <string name="include_hint">Include</string>
    <string name="exclude_hint">Exclude</string>
    <string name="search_hint">Apply</string>
    <string name="search_icon_desc">Search Icon</string>
    <string name="none_label">No sort</string>
    <string name="create_recipe_label">Create Recipe</string>
    <string name="import_recipe_label">Import Recipe</string>
    <string name="import_hint">Paste link to the website to import recipe</string>
    <string name="paste_url_hint">Paste URL</string>
    <string name="import_action">Import</string>
    <string name="welcome_to_all_label">Welcome to Electronic Cook Book App</string>
    <string name="start_using">Start Using</string>
    <string name="start_message">Using this app you can create, import and view all of your personal recipes in one app\n\nApp does not use Internet most of the time unless you request it do import a page\n\nPlease create your user profile</string>
    <string name="video_not_allowed">You can\'t add video here!</string>

</resources>